@@ -6,12 +6,12 @@
 
     <groupId>org.example</groupId>
     <artifactId>re</artifactId>
-    <version>2024.7.0</version>
+    <version>2024.8.0</version>
 
     <properties>
-        <maven.compiler.release>22</maven.compiler.release>
+        <maven.compiler.release>23</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <hutool.version>6.0.0-M14</hutool.version>
+        <hutool.version>6.0.0-M15</hutool.version>
         <kala.version>0.74.0</kala.version>
         <slf4j.version>2.0.13</slf4j.version>
         <logback.version>1.5.6</logback.version>
@@ -23,6 +23,7 @@
         <okhttp.version>5.0.0-alpha.14</okhttp.version>
         <jctools.version>4.0.5</jctools.version>
         <pcollections.version>4.0.2</pcollections.version>
+        <easyexcel.version>4.0.2</easyexcel.version>
     </properties>
 
     <dependencyManagement>
@@ -37,7 +38,7 @@
             <dependency>
                 <groupId>org.junit</groupId>
                 <artifactId>junit-bom</artifactId>
-                <version>5.11.0-M2</version>
+                <version>5.11.0-RC1</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -60,7 +61,7 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.15.0</version>
+            <version>3.16.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -80,7 +81,13 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-compress</artifactId>
-            <version>1.26.2</version>
+            <version>1.27.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.commons</groupId>
+                    <artifactId>commons-lang3</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.dromara.hutool</groupId>
@@ -111,12 +118,12 @@
         <dependency>
             <groupId>it.unimi.dsi</groupId>
             <artifactId>fastutil-core</artifactId>
-            <version>8.5.13</version>
+            <version>8.5.14</version>
         </dependency>
         <dependency>
             <groupId>org.agrona</groupId>
             <artifactId>agrona</artifactId>
-            <version>1.21.2</version>
+            <version>1.22.0</version>
         </dependency>
         <dependency>
             <groupId>org.jctools</groupId>
@@ -220,7 +227,7 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>easyexcel</artifactId>
-            <version>4.0.1</version>
+            <version>${easyexcel.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.apache.commons</groupId>
@@ -275,24 +282,6 @@
                 <executions>
                     <execution>
                         <id>attach-sources</id>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.7.0</version>
-                <configuration>
-                    <additionalOptions>
-                        <additionalOption>--enable-preview</additionalOption>
-                    </additionalOptions>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>attach-javadocs</id>
                         <goals>
                             <goal>jar</goal>
                         </goals>
